--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <version>1.8.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
+        </dependency>
+
     </dependencies>
 
     <build>
